<resources>
    <string name="app_name">Aurudu Nakath Seettuwa</string>
    <string name="sun_image_description">Sun image</string>
    <string name="main_header_text03">නැකැත්</string>
    <string name="main_header_text02">අවුරුදු</string>
    <string name="main_header_text01">අපේ</string>
    <string name="sinhala_btn_text">සිංහල</string>
    <string name="tamil_btn_text">தமிழ்</string>
    <string name="sinhala_header">සුභ අලුත් අවුරුද්දක් වේවා</string>
    <string name="tamil_header">இனிய புத்தாண்டு நல்வாழ்த்துக்கள்.</string>
    <string name="nakatha01_header">නව සද බැලීම</string>
    <string name="nakatha01_description">අභිනව චන්ද්‍ර වර්ෂය සදහා මාර්තු මස 30 වැනි ඉරිදා දිනද අභිනව සූර්ය වර්ෂය සදහා මැයි මස 01 වැනි බ්‍රහස්පතින්දා දිනද නවසද බැලීම මැනවි.</string>
    <string name="nakatha02_header">පරණ අවුරුද්ද සදහා ස්නානය</string>
    <string name="nakatha02_description">අප්‍රේල් මස 13 වැනි ඉරිදා දින දිඹුල්පත් යුෂ මිශ්‍ර නානු ගා ස්නානය කොට ඉෂ්ට දේවතා අනුස්මරණයෙහි යෙදී වාසය මැනවි.</string>
    <string name="nakatha03_header">අලුත් අවුරුදු උදාව</string>
    <string name="nakatha03_description">අප්‍රේල් මස 14 වැනි සදුදා දින පූර්වභාග 03.21 ට සිංහල හා දෙමල අලුත් අවුරුද්ද උදා වෙයි.</string>
    <string name="nakatha04_header">පුණ්‍ය කාලය</string>
    <string name="nakatha04_description">අප්‍රේල් මස 13 වැනි ඉරිදා අපරභාග 08.57 සිට පසු දින එනම් 14 වැනි සදුදා පූර්වභාග 09.45 දක්වා පුණ්‍ය කාලය බැවින් අප්‍රේල් මස 13 වැනි ඉරිදා අපරභාග 08.57ට පලමුව ආහාරපාන ගෙන සියලු වැඩ අත්හැර ආගමික වතාවත්වල යෙදීම ද පුණ්‍ය කාලයේ අපර කොටස එනම් අප්‍රේල් මස 14 වැනි සදුදා පූර්වභාග 03.21 සිට 14 වැනි සදුදා පූර්වභාග 09.45 දක්වා පහත දැක්වෙන අයුරින් ආහාර පිසීම, වැඩ ඇල්ලීම, ගනුදෙනු කිරීම හා ආහාර අනුභවය ආදී නැකත් චාරිත්‍ර විධි ඉටු කිරීම මැනවි.</string>
    <string name="nakatha05_header">ආහාර පිසීම</string>
    <string name="nakatha05_description">අප්‍රේල් මස 14 වැනි සදුදා දින පූර්වභාග 04.04ට තනි වර්ණ වස්ත්‍රාභරණයෙන් සැරසී දකුණු දිශාව බලා ලිප් බැඳ ගිනි මොලවා කිරිබතක් ද, කැවිලි වර්ගයක් ද, දී කිරි හා විලද ද පිළියෙල කරගැනීම මැනවි.</string>
    <string name="nakatha06_header">වැඩ ඇල්ලීම ගනුදෙනු කිරීම හා ආහාර අනුභවය</string>
    <string name="nakatha06_description">අප්‍රේල් මස 14 වැනි සදුදා පූර්වභාග 06.44ට මුතු හා ශ්වේත වර්ණ වස්ත්‍රාභරණයෙන් සැරසී දකුණු දිශාව බලා සියලු වැඩ අල්ලා ගනුදෙනු කොට ආහාර අනුභවය මැනවි.</string>
    <string name="nakatha07_header">හිසතෙල් ගෑම</string>
    <string name="nakatha07_description">අප්‍රේල් මස 16 වැනි බදාදා පූර්වභාග 09.04ට පච්ච වර්ණ හෙවත් කොළ පැහැති වස්ත්‍රාභරණයෙන් සැරසී උතුරු දිශාව බලා හිසට කොහොඹ පත් ද, පයට කොළොන් පත් ද තබා කොහොඹ පත් යුෂ මිශ්‍ර නානු හා තෙල් ගා ස්නානය කිරීම මැනවි.</string>
    <string name="nakatha08_header">රැකී රක්ෂා සදහා පිටත්ව යාම</string>
    <string name="nakatha08_description">අප්‍රේල් මස 17 වැනි බ්‍රහස්පතින්දා පූර්වභාග 09.03ට රන්වන් පැහැති වස්ත්‍රාභරණයෙන් සැරසී කිරිබතක් හා එළකිරි මිශ්‍ර කැවිලි වර්ගයක් අනුභව කර උතුරු දිශාව බලා පිටත්ව යෑම මැනවි.</string>
    <string name="next_nakatha">මීලග නැකත :</string>
    <string name="days">දින</string>
    <string name="hours">පැය</string>
    <string name="minutes">මිනි</string>
    <string name="seconds">තත්</string>
    <string name="clip_art">Clip art</string>
    <string name="no_more_nakathas"> </string>
    <string name="default_nakatha_description">2026 දි නැවත හමුවෙමු.</string>
    <string name="next_nakatha_t">அடுத்தது:</string>
    <string name="days_t">நாள்கள்</string>
    <string name="hours_t">மணி நேரம்</string>
    <string name="minutes_t">நிமிடங்கள்</string>
    <string name="seconds_t">விநாடிகள்</string>
    <string name="nakatha01_header_t">அமாவாசை காணும்</string>
    <string name="nakatha01_description_t">புதிய சந்திர ஆண்டுக்காக மார்ச் 30 ஆம் திகதி ஞாயிற்றுக்கிழமையும், புதிய சூரிய ஆண்டுக்காக மே 01 ஆம் திகதி வியாழக்கிழமையும் கொண்டாடப்படும்.</string>
    <string name="nakatha02_header_t">முதுமைக்கான குளியல்</string>
    <string name="nakatha02_description_t">ஏப்ரல் 13, ஞாயிற்றுக்கிழமை அன்று எலுமிச்சை சாறு கலந்து குளித்து இஷ்ட தேவியின் நினைவாக வசிப்பார்கள்.</string>
    <string name="nakatha03_header_t">புத்தாண்டு கொண்டாட்டம்</string>
    <string name="nakatha03_description_t">சிங்கள மற்றும் தமிழ் புத்தாண்டு ஏப்ரல் 14, திங்கட்கிழமை அதிகாலை 03.21 மணிக்கு ஆரம்பமாகிறது.</string>
    <string name="nakatha04_header_t">தொண்டு நேரம்</string>
    <string name="nakatha04_description_t">ஏப்ரல் 13 ஞாயிற்றுக்கிழமை காலை 08.57 மணி முதல் ஏப்ரல் 14 திங்கட்கிழமை காலை 09.45 மணி வரை தர்ம நேரம் என்பதால், முதல் உணவு மற்றும் அனைத்து வேலைகளையும் விட்டுவிட்டு மத சடங்குகளில் ஈடுபடுங்கள்.  வேலையைப் பிடிப்பது, உணவைக் கையாள்வது, சாப்பிடுவது போன்ற சடங்குகளைச் செய்யுங்கள்.</string>
    <string name="nakatha05_header_t">சமையல்</string>
    <string name="nakatha05_description_t">ஏப்ரல் 14 திங்கட்கிழமை அதிகாலை 04.04 மணிக்கு, ஒற்றை வண்ண ஆடை அணிந்து, தெற்கு நோக்கி பார்த்து, உதட்டைக் கட்டி, பால் கிண்ணம், மிட்டாய், பால் மற்றும் மது தயார் செய்யுங்கள்.</string>
    <string name="nakatha06_header_t">பிடித்தல் வேலை கையாளுதல் மற்றும் உணவு உண்ணுதல்</string>
    <string name="nakatha06_description_t">ஏப்ரல் 14 திங்கட்கிழமை காலை 06.44 மணிக்கு, முத்துக்கள் மற்றும் வெள்ளை ஆடைகளை அணிந்து, தெற்கு நோக்கி பார்த்து, அனைத்து வேலைகளையும் பிடித்து, உணவு உட்கொள்ளலை அளவிடுங்கள்.</string>
    <string name="nakatha07_header_t">தலைக்கு எண்ணெய் தடவுதல்</string>
    <string name="nakatha07_description_t">ஏப்ரல் 16 புதன்கிழமை காலை 09.04 மணிக்கு, பச்சை நிறம் அல்லது பச்சை ஆடைகளை அணிந்து, வடக்கு நோக்கி பார்த்து, தேங்காய் சாறு மற்றும் எண்ணெய் கலந்த குளியலில் குளிக்கவும்.</string>
    <string name="nakatha08_header_t">வேலைக்கு லீவு</string>
    <string name="nakatha08_description_t">ஏப்ரல் 17 வியாழக்கிழமை காலை 09.03 மணிக்கு, தங்க ஆடைகளை அணிந்து, பாலும் பசும்பாலும் கலந்த மிட்டாயை சாப்பிட்டுவிட்டு வடக்கு திசைக்கு புறப்படுங்கள்.</string>
    <string name="no_more_nakathas_t"> </string>
    <string name="default_nakatha_description_t">மீண்டும் 2026-யில் சந்திப்போம்.</string>
    <string name="alarm_stop_text">Stop Alarm</string>
    <string name="event_image">Event image</string>
    <string name="about_button">About button</string>
    <string name="about_image">About image</string>
    <string name="about_header">අවුරුදු නැකත් සීට්ටුව</string>
    <string name="version">Version 1.0.0.1</string>
    <string name="copyright">© 2024–2025 itz Hiru</string>
    <string name="github_account">Visit creator Github</string>
</resources>